samples/_failures_safe/1761707663_700e00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_478c9388.c: In function ‘main’:
./samples/SAFE/__tmp_478c9388.c:147:5: error: expected declaration or statement at end of input
  147 |     add_edge(&g, 0, 2, 2);
      |     ^~~~~~~~
